setzen von Routen, füllen der Einfach komponente

--- a/Semesteraufgabe/src/app/app.component.html
+++ b/Semesteraufgabe/src/app/app.component.html
@@ -1,295 +1,5 @@
+<app-toolbar></app-toolbar>
+<router-outlet></router-outlet>
+<app-footer></app-footer>
 
 
-<style>
-  :host {
-    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
-    font-size: 14px;
-    color: #333;
-    box-sizing: border-box;
-    -webkit-font-smoothing: antialiased;
-    -moz-osx-font-smoothing: grayscale;
-  }
-
-  h1,
-  h2,
-  h3,
-  h4,
-  h5,
-  h6 {
-    margin: 8px 0;
-  }
-
-  p {
-    margin: 0;
-  }
-
-  .spacer {
-    flex: 1;
-  }
-
-  .toolbar {
-    position: absolute;
-    top: 0;
-    left: 0;
-    right: 0;
-    height: 60px;
-    display: flex;
-    align-items: center;
-    background-color: #b12f07;
-    color: white;
-    font-weight: 600;
-  }
-
-  .toolbar img {
-    margin: 0 16px;
-  }
-
-  .content {
-    display: flex;
-    margin: 82px auto 32px;
-    padding: 0 16px;
-    max-width: 960px;
-    flex-direction: column;
-    align-items: center;
-  }
-
-  svg.material-icons {
-    height: 24px;
-    width: auto;
-  }
-
-  svg.material-icons:not(:last-child) {
-    margin-right: 8px;
-  }
-
-  .card svg.material-icons path {
-    fill: #888;
-  }
-
-  .card-container {
-    display: inline-flex;
-    flex-wrap: wrap;
-    justify-content: center;
-    margin-top: 16px;
-  }
-
-  .card{
-    all: unset;
-    border-radius: 4px;
-    border: 1px solid #eee;
-    background-color: #fafafa;
-    height: 40px;
-    width: 200px;
-    margin: 0 8px 16px;
-    padding: 16px;
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    align-items: center;
-    transition: all 0.2s ease-in-out;
-    line-height: 24px;
-  }
-
-  .card-container .card:not(:last-child) {
-    margin-right: 0;
-  }
-
-  .card-container .card:not(.highlight-card) {
-    cursor: pointer;
-  }
-
-  .card-container .card:not(.highlight-card):hover {
-    transform: translateY(-3px);
-    box-shadow: 0 4px 17px rgba(0, 0, 0, 0.35);
-  }
-
-  .card-container .card:not(.highlight-card):hover .material-icons path {
-    fill: rgb(105, 103, 103);
-  }
-
-  .card.highlight-card {
-    background-color: #1976d2;
-    color: white;
-    font-weight: 600;
-    border: none;
-    width: auto;
-    min-width: 30%;
-    position: relative;
-  }
-
-  .card.card.highlight-card span {
-    margin-left: 60px;
-  }
-
-  a,
-  a:visited, button:visited, button:hover,
-  a:hover {
-    color: #d25d19;
-    text-decoration: none;
-  }
-
-  a:hover {
-    color: #d25d19;
-  }
-
-  .terminal {
-    position: relative;
-    width: 80%;
-    max-width: 600px;
-    border-radius: 6px;
-    padding-top: 45px;
-    margin-top: 8px;
-    overflow: hidden;
-    background-color: rgb(15, 15, 16);
-  }
-
-  .terminal::before {
-    content: "\2022 \2022 \2022";
-    position: absolute;
-    top: 0;
-    left: 0;
-    height: 4px;
-    background: rgb(58, 58, 58);
-    color: #c2c3c4;
-    width: 100%;
-    font-size: 2rem;
-    line-height: 0;
-    padding: 14px 0;
-    text-indent: 4px;
-  }
-
-  .terminal pre {
-    font-family: SFMono-Regular,Consolas,Liberation Mono,Menlo,monospace;
-    color: white;
-    padding: 0 1rem 1rem;
-    margin: 0;
-  }
-
-  footer {
-    margin-top: 8px;
-    display: flex;
-    align-items: center;
-    line-height: 20px;
-    position: absolute;
-    bottom: 0;
-    left: 0;
-    right: 0;
-    height: 60px;
-    display: flex;
-    align-items: center;
-    background-color: #b12f07;
-    color: white;
-    font-weight: 600;
-  }
-
-  footer a {
-    display: flex;
-    align-items: center;
-  }
-
-  .material-icons {
-    height: 16px;
-    width: 16px;
-    margin-right: 4px;
-  }
-
-
-  /* Responsive Styles */
-  @media screen and (max-width: 767px) {
-    .card-container > *:not(.circle-link) ,
-    .terminal {
-      width: 100%;
-    }
-
-    .card:not(.highlight-card) {
-      height: 16px;
-      margin: 8px 0;
-    }
-
-    .card.highlight-card span {
-      margin-left: 72px;
-    }
-  }
-
-  @media screen and (max-width: 575px) {
-    .card {
-      display: inline-flex;
-      
-    }
-  }
-</style>
-
-<!-- Toolbar -->
-<div class="toolbar" role="banner">
-  <img
-    width="40"
-    alt="Genussfeuerwehr Logo"
-    src="../assets/wappen2.png"
-  />
-  <span>Genussretter Rezepte</span>
-    <div class="spacer"></div>
-    
-</div>
-
-<div class="content" role="main">
-
-  <!-- Kategorien -->
-  <h2>Kategorien</h2>
-  <p>Wähle eine passende Kategorie aus:</p>
-
-  <div class="card-container">
-    <a class="card" target="_blank" rel="noopener" href="/Einfach">
-      <img src="../assets/Besteck.svg" width="20px">
-      <span>Einfache Gerichte</span>  
-    </a>
-
-    <a class="card" target="_blank" rel="noopener" href="/International">
-      <img src="../assets/Welt.svg" width="20px">
-      <span>Internationale Gerichte</span>
-    </a>
-
-    <a class="card" target="_blank" rel="noopener" href="/Krustentiere">
-      <img src="../assets/Fisch.svg" width="20px">
-      <span>Krustentiere und Fisch</span>
-    </a>
-
-    <a class="card" target="_blank" rel="noopener" href="/Suessspeisen">
-      <img src="../assets/Eis.svg" width="20px">
-      <span>Süßspeisen</span>
-    </a>
-    
-
-  </div>
-
-  <!-- Rezepte verwalten -->
-  <h2>Rezepte verwalten</h2>
-  <p>Überarbeite deine Rezepte</p>
-
-  <input type="hidden" #selection>
-
-  <div class="card-container">
-    <a class="card" target="_blank" rel="noopener" href="/RezeptNiederschreiben">
-      <img src="../assets/Feder.svg" width="20px">
-      <span>Rezept niederschreiben</span>
-    </a>
-
-    <a class="card" target="_blank" rel="noopener" href="/RezeptVerbessern">
-      <img src="../assets/Idee.svg" width="20px">
-      <span>Rezept verbessern</span>
-    </a>
-
-    <a class="card" target="_blank" rel="noopener" href="/RezeptVergessen">
-      <img src="../assets/Papierkorb.svg" width="20px">
-      <span>Rezept vergessen</span>
-    </a>
-  </div>
-
-
-  <!-- Footer -->
-  <footer>
-        
-  </footer>
-
-  
-
-</div>
