--- a/Semesteraufgabe/src/app/footer/footer.component.html
+++ b/Semesteraufgabe/src/app/footer/footer.component.html
@@ -4,7 +4,7 @@
       display: flex;
       align-items: center;
       line-height: 20px;
-      position: absolute;
+      position: sticky;
       bottom: 0;
       left: 0;
       right: 0;
