--- a/Semesteraufgabe/src/app/footer/footer.component.html
+++ b/Semesteraufgabe/src/app/footer/footer.component.html
@@ -1,10 +1,10 @@
 <style>
     footer {
       margin-top: 8px;
-      display: flex;
+      display: absolute;
       align-items: center;
       line-height: 20px;
-      position: sticky;
+      position: flex;
       bottom: 0;
       left: 0;
       right: 0;
