Anbindung frontend backend

--- a/Semesteraufgabe/src/app/create/create.component.html
+++ b/Semesteraufgabe/src/app/create/create.component.html
@@ -52,7 +52,7 @@
         <option value="Einfach">Einfach Gerichte</option>
         <option value="International">Internationale Gerichte</option>
         <option value="Krustentiere">Krusten- und Meerestiere</option>
-        <option value="Suesspeisen">Sußspeisen</option>
+        <option value="Suesspeisen">Süßspeisen</option>
     </select>
 </div>
 
