--- a/Semesteraufgabe/src/app/krustentiere/krustentiere.component.html
+++ b/Semesteraufgabe/src/app/krustentiere/krustentiere.component.html
@@ -38,7 +38,7 @@ h1,
 </style>
 
 <div class="container">
-    <h1>Einfache Gerichte</h1>
+    <h1>Krustentiere</h1>
 
 
     <table class="table table-hover table-responsive-md">
@@ -46,7 +46,7 @@ h1,
             <tr>
                 <th scope="col">Nr</th>
                 <th scope="col">Name</th>
-                <th scope="col">Portion</th>
+                <th scope="col">Portionen</th>
             </tr>
         </thead>
         <tbody>
@@ -58,3 +58,4 @@ h1,
         </tbody>
     </table>
 </div>
+
