--- a/Semesteraufgabe/src/app/einfach/einfach.component.html
+++ b/Semesteraufgabe/src/app/einfach/einfach.component.html
@@ -46,14 +46,16 @@ h1,
             <tr>
                 <th scope="col">Nr</th>
                 <th scope="col">Name</th>
-                <th scope="col">Portion</th>
+                <th scope="col">Kategorie</th>
+                <th scope="col">Portionen</th>
             </tr>
         </thead>
         <tbody>
             <tr *ngFor=" let rezept of rezepte; let i=index ">
                 <td>{{ i+1 }} </td>
                 <td>{{ rezept.Name }}</td>
-                <td>{{ rezept.Portion }}</td>        
+                <td>{{ rezept.Kategorie }}</td>
+                <td>{{ rezept.Portion }}</td>    
             </tr>
         </tbody>
     </table>
