--- a/Semesteraufgabe/src/app/toolbar/toolbar.component.html
+++ b/Semesteraufgabe/src/app/toolbar/toolbar.component.html
@@ -45,12 +45,9 @@
 
 <!-- Toolbar -->
 <div class="toolbar" role="banner">
-    <img
-      width="40"
-      alt="Genussfeuerwehr Logo"
-      src="../assets/wappen2.png"
-    />
+  <a [routerLink]="['/']">
+    <img width="40" alt="Genussfeuerwehr Logo" src="../assets/wappen2.png"/>
+  </a>
     <span>Genussretter Rezepte</span>
       <div class="spacer"></div>
-      
   </div>
