--- a/Semesteraufgabe/src/app/suessspeisen/suessspeisen.component.html
+++ b/Semesteraufgabe/src/app/suessspeisen/suessspeisen.component.html
@@ -1,1 +1,69 @@
-<p>suessspeisen works!</p>
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+
+<style>
+
+:host {
+      font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
+      font-size: 14px;
+      color: #333;
+      box-sizing: border-box;
+      -webkit-font-smoothing: antialiased;
+      -moz-osx-font-smoothing: grayscale;
+    }
+
+
+h1,
+    h2,
+    h3,
+    h4,
+    h5,
+    h6 {
+      margin: 8px 0;
+    }
+  
+    p {
+      margin: 0;
+    }
+
+    table {
+      padding: 16px;
+      width: 100%;
+      flex-direction: column;
+      align-items: center;
+    }
+    .table tbody tr:hover {
+        background-color: salmon;
+    }
+
+</style>
+
+<div class="container">
+    <h1>Süßspeisen</h1>
+
+
+    <table class="table table-hover table-responsive-md">
+        <thead>
+            <tr>
+                <th scope="col">Nr</th>
+                <th scope="col">Name</th>
+                <th scope="col">Kategorie</th>
+                <th scope="col">Portionen</th>
+                <th scope="col">Bearbeiten</th>
+            </tr>
+        </thead>
+        <tbody>
+           
+            <tr *ngFor=" let rezept of rezepte; let i=index ">
+                    <td>{{ i+1 }} </td>
+                    <td>{{ rezept.Name }}</td>
+                    <td>{{ rezept.Kategorie }}</td>
+                    <td>{{ rezept.Portion }}</td>
+                    <td>
+                        <a [routerLink]="['/Detail', rezept._id]"> <span class=" bi bi-pencil-square px-5 "></span></a>
+                        <span (click)="delete(rezept._id)" class=" bi bi-trash px-5 "></span>
+                    </td>
+            </tr>
+        </tbody>
+    </table>
+</div>
+
