Rezeptdetails aufruf, Dotenv hinzufügen

--- a/Semesteraufgabe/src/app/detail/detail.component.html
+++ b/Semesteraufgabe/src/app/detail/detail.component.html
@@ -25,3 +25,10 @@ h1,
       margin: 0;
     }
 </style>
+<main class="d-flex min-vh-100">
+  <fieldset class="container  mt-5">
+      <legend *ngIf="rezepte" class="mb-4">{{ rezepte.Name }}
+      </legend>
+      
+  </fieldset>
+</main>
