--- a/Semesteraufgabe/src/app/einfach/einfach.component.html
+++ b/Semesteraufgabe/src/app/einfach/einfach.component.html
@@ -59,7 +59,7 @@ h1,
                     <td>{{ rezept.Kategorie }}</td>
                     <td>{{ rezept.Portion }}</td>  
                     <td>
-                        <a [routerLink]="['/Detail', rezept._id]"> <span class=" bi bi-pencil-square px-5 "></span></a>
+                        <a [routerLink]="['/Rezeptdetail', rezept._id]"> <span class=" bi bi-pencil-square px-5 "></span></a>
                         <span (click)="delete(rezept._id)" class=" bi bi-trash px-5 "></span>
                     </td>     
             </tr>            
