--- a/Semesteraufgabe/src/app/einfach/einfach.component.html
+++ b/Semesteraufgabe/src/app/einfach/einfach.component.html
@@ -48,7 +48,7 @@ h1,
                 <th scope="col">Name</th>
                 <th scope="col">Kategorie</th>
                 <th scope="col">Portionen</th>
-                <th scope="col">Details</th>
+                <th scope="col">Verbessern + Vergessen</th>
             </tr>
         </thead>
         <tbody>
