--- a/Semesteraufgabe/src/app/krustentiere/krustentiere.component.html
+++ b/Semesteraufgabe/src/app/krustentiere/krustentiere.component.html
@@ -26,7 +26,7 @@ h1,
     }
 
     table {
-      padding: 16px;
+      padding: 8px;
       width: 100%;
       flex-direction: column;
       align-items: center;
@@ -47,8 +47,7 @@ h1,
                 <th scope="col">Nr</th>
                 <th scope="col">Name</th>
                 <th scope="col">Kategorie</th>
-                <th scope="col">Portionen</th>
-                <th scope="col">Bearbeiten</th>
+                <th scope="col">Verbessern + Vergessen</th>
             </tr>
         </thead>
         <tbody>
@@ -57,7 +56,6 @@ h1,
                     <td>{{ i+1 }} </td>
                     <td>{{ rezept.Name }}</td>
                     <td>{{ rezept.Kategorie }}</td>
-                    <td>{{ rezept.Portion }}</td>
                     <td>
                         <a [routerLink]="['/Rezeptdetail', rezept._id]"> <span class=" bi bi-pencil-square px-5 "></span></a>
                         <span (click)="delete(rezept._id)" class=" bi bi-trash px-5 "></span>
