--- a/Semesteraufgabe/src/app/startseite/startseite.component.html
+++ b/Semesteraufgabe/src/app/startseite/startseite.component.html
@@ -216,11 +216,12 @@
     <input type="hidden" #selection>
   
     <div class="card-container">
-      <a class="card" target="_blank" rel="noopener" href="/RezeptNiederschreiben">
+      <a class="card" rel="noopener" href="/RezeptNiederschreiben">
         <img src="../assets/Feder.svg" width="20px">
         <span>Rezept niederschreiben</span>
       </a>
-  
+      
+      <!--
       <a class="card" target="_blank" rel="noopener" href="/RezeptVerbessern">
         <img src="../assets/Idee.svg" width="20px">
         <span>Rezept verbessern</span>
@@ -230,6 +231,9 @@
         <img src="../assets/Papierkorb.svg" width="20px">
         <span>Rezept vergessen</span>
       </a>
+    
+    -->
+
     </div>
   
   
