--- a/Semesteraufgabe/src/app/startseite/startseite.component.html
+++ b/Semesteraufgabe/src/app/startseite/startseite.component.html
@@ -187,22 +187,22 @@
     <p>Wähle eine passende Kategorie aus:</p>
   
     <div class="card-container">
-      <a class="card" target="_blank" rel="noopener" href="/Einfach">
+      <a class="card" rel="noopener" href="/Einfach">
         <img src="../assets/Besteck.svg" width="20px">
         <span>Einfache Gerichte</span>  
       </a>
   
-      <a class="card" target="_blank" rel="noopener" href="/International">
+      <a class="card" rel="noopener" href="/International">
         <img src="../assets/Welt.svg" width="20px">
         <span>Internationale Gerichte</span>
       </a>
   
-      <a class="card" target="_blank" rel="noopener" href="/Krustentiere">
+      <a class="card" rel="noopener" href="/Krustentiere">
         <img src="../assets/Fisch.svg" width="20px">
         <span>Krustentiere und Fisch</span>
       </a>
   
-      <a class="card" target="_blank" rel="noopener" href="/Suessspeisen">
+      <a class="card" rel="noopener" href="/Suessspeisen">
         <img src="../assets/Eis.svg" width="20px">
         <span>Süßspeisen</span>
       </a>
